Fix mobile regression related to z-index

--- a/_assets/stylesheets/components/_navbar.scss
+++ b/_assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@ body.active {
 }
 
 #navbar-container {
-  z-index: 1;
+  z-index: 2;
   padding-top: 1rem;
   align-items: flex-start;
   justify-content: flex-start;
